# DarkWin-AATK

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
automation/: __init__.py  bug_bounty_pipeline.py  full_scan_pipeline.py  recon_pipeline.py
core/: __init__.py  config.yaml  config_loader.py  darkwin.py  engine.py  logger.py  pipeline.py  setup_wizard.py  tool_loader.py  tool_runner.py
dashboard/backend/: app.py
dashboard/frontend/: README.md  out.css  package-lock.json
docs/: AI_MODULE_SPEC.md  memory_map.md
modules/: __init__.py
modules/cloud/: __init__.py  aws_enum.py  azure_enum.py  cloud_enum.py  gcp_enum.py  utils.py
modules/exploitation/: __init__.py  exploit_runner.py  metasploit_runner.py  payload_generator.py
modules/fuzzing/: __init__.py  api_fuzzer.py  directory_fuzzer.py  parameter_fuzzer.py
modules/network/: __init__.py  ftp_enum.py  port_scanner.py  service_enum.py  smb_enum.py  ssh_enum.py
modules/osint/: __init__.py  breach_lookup.py  email_harvester.py  metadata_scraper.py  social_media_enum.py
modules/post_exploitation/: __init__.py  lateral_movement.py  persistence_auditor.py  privesc_checker.py
modules/recon/: __init__.py  asn_lookup.py  dns_bruteforce.py  github_dorking.py  reverse_ip.py  s3_bucket_scan.py  subdomain_enum.py  whois_lookup.py
modules/reporting/: __init__.py  html_report.py  markdown_report.py  (+1 more)
scripts/: install_tools.sh  install_wordlists.sh  setup.sh
templates/: report.html.j2
tests/: __init__.py
(+69 files in other folders)
