[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkwin"
version = "1.1.0"
description = "Advanced Automation Toolkit for ethical hackers and bug bounty hunters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ARYAN AHIRWAR (VIPHACKER.100)" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "colorama>=0.4.6",
    "click>=8.1.7",
    "jinja2>=3.1.2",
    "loguru>=0.7.2",
    "flask>=3.0.0",
    "flask-socketio>=5.3.6",
    "flask-cors>=4.0.0",
]

[project.scripts]
darkwin = "core.darkwin:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "automation*", "dashboard*"]
